[metadata]
name = abuse_finder
version = 0.2
author = CERT Société Générale
author_email = cert.sg@socgen.com
license = GPLv3
description = Look for abuse contacts for IP, domain names, email addresses and URLs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/certsocietegenerale/abuse_finder

[options]
packages = abuse_finder
zip_safe = False
install_requires =
    ipwhois
    ipaddress
    pythonwhois-alt
    tldextract
    future
    dnspython
